# syncalpy

./: .gitignore  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
configuration/: index.html
docs/: configuration.md  index.md  usage.md
search/: search_index.json
src/syncalpy/: __init__.py  __main__.py  calendar.py  config.py  event.py  sync.py
src/syncalpy/filters/: __init__.py  future_only.py  regexp.py
src/syncalpy/protocols/: __init__.py  caldav.py  ics_file.py  jcal.py  zimbra.py
tests/scenarios/: test_ics_sync.py  test_sync.py
tests/unit/: test_calendar.py  test_filters.py
usage/: index.html
